cards overflow is fixed

--- a/Angular/src/app/shared/card1/card1.component.scss
+++ b/Angular/src/app/shared/card1/card1.component.scss
@@ -14,3 +14,7 @@ $primary: #1FA78F;
     display: flex !important;
     flex-flow: row;
 }
+.card-body{
+    height: 290px;
+    overflow: hidden;
+}
